--- a/signup-form/style.css
+++ b/signup-form/style.css
@@ -67,13 +67,23 @@ input::placeholder, input{
     font-family: 'Poppins',sans-serif;
 } 
 
+input:active, input:focus{
+    outline: 1px solid hsl(248, 32%, 49%) ;
+}
 .input-group{
     margin-bottom: 10px;
 }
 
-input:active, input:focus{
-    outline: 1px solid hsl(248, 32%, 49%) ;
+.input-group.error input{
+    border: 1PX solid hsl(0, 100%, 74%) ;
 }
+.input-group.error .message{
+    color: hsl(0, 100%, 74%) ;
+}
+.input-group.error ::placeholder{
+    color: hsl(0, 100%, 74%) ;
+}
+
 
 .button{
     background-color: hsl(154, 59%, 51%);
@@ -87,6 +97,7 @@ input:active, input:focus{
     font-weight: 550;
     color: white;
     box-shadow: inset 0 -5px 0 0 rgba(0  , 0, 0, 0.2);
+    cursor: pointer;
     
 }
 .message1{
