--- a/tip-calculator-app-main/tip-calculator-app-main/style.css
+++ b/tip-calculator-app-main/tip-calculator-app-main/style.css
@@ -56,11 +56,15 @@ label, input{
     padding: 7px 20px;
     background-color: var(--clr-neutral-4);
     border: none;
+    font-family: var(--primary-font);
+    color: var(--clr-neutral-1);
+    font-size: var(--font-input-size);
+    text-align: right;
 }
 .tips-group{
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+   
 }
 .tips-group .button{
     background-color: var(--clr-neutral-1);
@@ -68,8 +72,67 @@ label, input{
     border: none;
     color: var(--clr-white);
     font-size: var(--font-input-size);
-    /* width: calc(33.33% -40px); */
-    flex: 1;
+    width: calc(33.33% - 20px);
+
+   margin-right: 10px;
+   margin-bottom: 10px;
+   font-family: var(--primary-font);
 }
 
+.tips-group .button:hover{
+    background-color: var(--clr-neutral-4);
+    color: var(--clr-neutral-1);
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.calculation-result{
+    background-color: var(--clr-neutral-1);
+    width: 50%;
+    /* color: var(--clr-white); */
+    border-radius: 20px;
+    padding: 30px 40px;
+    display: flex; 
+    flex-direction: column; 
+    
+}
+.calculation-amount{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+
+    
+}
+.main-title{
+    color: var(--clr-neutral-4);
+    font-size: 18px;
+}
+
+.subtitle{
+    color: var(--clr-neutral-3);
+    font-size: 14px;
+}
+.amount{
+    font-size: 30px;
+    color: var(--clr-primary);
+}
+.calculation-result .button{
+    margin-top: auto;
+    width: 100%;
+    padding: 8px 20px;
+    text-transform: uppercase;
+    border: none;
+    font-family: var(--primary-font);
+    border-radius: 10px;
+    font-size: 19px;
+    background-color: var(--clr-neutral-4);
+
+}
+
+.calculation-result .button:hover{
+    background-color: var(--clr-primary);
+    cursor: pointer;
+    transition: all 0.2s;
+    color: var(--clr-neutral-4);
+}
 
